trying to use scikit-build (not working so far)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.0)
 
-PROJECT(pyorbit CXX)
+PROJECT(pyorbit C CXX)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
+
+find_package(PythonExtensions REQUIRED)
 
 add_subdirectory(src)
