--- a/src/mpi/CMakeLists.txt
+++ b/src/mpi/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB src_files *.cc)
 add_library(po_mpi ${src_files})
-
+target_link_libraries(po_mpi ${MPI_CXX_LIBRARIES})
 
 install(TARGETS po_mpi
     LIBRARY DESTINATION lib
