importing modules now works not added all modules yet getting segfault when testing sns_linac_tr_matrices_generation.py probably messing up linking

--- a/src/linac/CMakeLists.txt
+++ b/src/linac/CMakeLists.txt
@@ -17,3 +17,9 @@ install(TARGETS po_linac po_linac_rfgap po_linac_tracking
     ARCHIVE DESTINATION lib
     COMPONENT Libraries
 )
+
+# This is how the actual Python object should look like
+add_library(linac MODULE  ${src_files})
+python_extension_module(linac)
+target_link_libraries(linac po_linac_rfgap po_linac_tracking)
+install(TARGETS linac LIBRARY DESTINATION .)
