--- a/src/spacecharge/CMakeLists.txt
+++ b/src/spacecharge/CMakeLists.txt
@@ -1,6 +1,6 @@
 file(GLOB sc_src_files *.cc)
 add_library(po_spacecharge ${sc_src_files})
-
+target_link_libraries(po_spacecharge ${FFTW_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
 install(TARGETS po_spacecharge
     LIBRARY DESTINATION lib
@@ -8,3 +8,8 @@ install(TARGETS po_spacecharge
     ARCHIVE DESTINATION lib
     COMPONENT Libraries
 )
+
+add_library(spacecharge MODULE wrap_spacecharge)
+python_extension_module(spacecharge)
+target_link_libraries(spacecharge po_spacecharge)
+install(TARGETS spacecharge LIBRARY DESTINATION .)
