--- a/src/teapot/CMakeLists.txt
+++ b/src/teapot/CMakeLists.txt
@@ -8,3 +8,10 @@ install(TARGETS po_teapot
     ARCHIVE DESTINATION lib
     COMPONENT Libraries
 )
+
+# This is how the actual Python object should look like
+add_library(teapot_base MODULE  wrap_teapotbase)
+python_extension_module(teapot_base)
+# I think this needs spacecharge as well?
+target_link_libraries(teapot_base po_teapot po_orbit)
+install(TARGETS teapot_base LIBRARY DESTINATION .)
