--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -21,8 +21,8 @@ install(TARGETS po_utils po_utils_bunch po_utils_integration po_utils_matrix po_
 
 
 # This is how the actual Python object should look like
-add_library(_utils MODULE  ${src_files})
-python_extension_module(_utils)
-target_link_libraries(_utils po_utils_bunch po_utils_integration po_utils_matrix po_utils_polynomial po_utils_statistics po_mpi)
+add_library(orbit_utils MODULE  ${src_files})
+python_extension_module(orbit_utils)
+target_link_libraries(orbit_utils po_utils_bunch po_utils_integration po_utils_matrix po_utils_polynomial po_utils_statistics po_orbit po_mpi)
 #target_link_libraries_with_dynamic_lookup(_utils po_utils_bunch po_utils_integration po_utils_matrix po_utils_polynomial po_utils_statistics po_mpi)
-install(TARGETS _utils LIBRARY DESTINATION orbit/utils)
+install(TARGETS orbit_utils LIBRARY DESTINATION .)
