--- a/src/linac/CMakeLists.txt
+++ b/src/linac/CMakeLists.txt
@@ -9,9 +9,9 @@ include_directories(tracking)
 file(GLOB src_files *.cc)
 add_library(po_linac ${src_files})
 
-target_link_libraries(po_linac po_linac_rfgap po_linac_tracking)
+target_link_libraries(po_linac po_linac_rfgap)
 
-install(TARGETS po_linac po_linac_rfgap po_linac_tracking
+install(TARGETS po_linac po_linac_rfgap
     LIBRARY DESTINATION lib
     COMPONENT Libraries
     ARCHIVE DESTINATION lib
@@ -21,5 +21,5 @@ install(TARGETS po_linac po_linac_rfgap po_linac_tracking
 # This is how the actual Python object should look like
 add_library(linac MODULE  ${src_files})
 python_extension_module(linac)
-target_link_libraries(linac po_linac_rfgap po_linac_tracking)
+target_link_libraries(linac pyorbit)
 install(TARGETS linac LIBRARY DESTINATION .)
