--- a/src/linac/rfgap/CMakeLists.txt
+++ b/src/linac/rfgap/CMakeLists.txt
@@ -1,3 +1,3 @@
-file(GLOB src_files *.cc)
+file(GLOB src_files wrap_*.cc)
 add_library(po_linac_rfgap ${src_files})
-target_link_libraries(po_linac_rfgap po_orbit)
+target_link_libraries(po_linac_rfgap pyorbit)
