--- a/src/linac/tracking/CMakeLists.txt
+++ b/src/linac/tracking/CMakeLists.txt
@@ -1,9 +1,7 @@
-file(GLOB src_files *.cc)
-add_library(po_linac_tracking ${src_files})
-target_link_libraries(po_linac_tracking po_orbit ${MPI_CXX_LIBRARIES})
+file(GLOB src_files wrap_*.cc)
 
 # This is how the actual Python object should look like
-add_library(linac_tracking MODULE wrap_linac_tracking)
+add_library(linac_tracking MODULE ${src_files})
 python_extension_module(linac_tracking)
-target_link_libraries(linac_tracking po_linac_tracking)
+target_link_libraries(linac_tracking pyorbit)
 install(TARGETS linac_tracking LIBRARY DESTINATION .)
