--- a/src/orbit/Apertures/CMakeLists.txt
+++ b/src/orbit/Apertures/CMakeLists.txt
@@ -1,8 +1,5 @@
-file(GLOB src_files *.cc)
-add_library(po_orbit_apertures ${src_files})
-
-# This is how the actual Python object should look like
+file(GLOB src_files wrap_*.cc)
 add_library(aperture MODULE  ${src_files})
 python_extension_module(aperture)
-target_link_libraries(aperture po_orbit ${MPI_CXX_LIBRARIES})
+target_link_libraries(aperture pyorbit)
 install(TARGETS aperture LIBRARY DESTINATION .)
