all libpo_ are removed libpyorbit.so contains all of pyorbit library (and most of wrappers because it all seems entangled for now)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,6 +24,7 @@ include_directories(orbit/MaterialInteractions)
 include_directories(orbit/RFCavities)
 include_directories(orbit/ParticlesAttributes)
 include_directories(orbit/BunchDiagnostics)
+include_directories(orbit/SynchPartRedefinition)
 include_directories(spacecharge)
 include_directories(teapot)
 include_directories(trackerrk4)
@@ -53,12 +54,14 @@ add_subdirectory(mpi)
 add_subdirectory(orbit)
 add_subdirectory(spacecharge)
 add_subdirectory(teapot)
-add_subdirectory(trackerrk4)
 add_subdirectory(utils)
 
-## Finally we create the main project..
-#add_executable(pyORBIT main/main)
-#target_link_libraries(pyORBIT python2.7 po_linac po_mpi po_orbit po_spacecharge po_teapot po_trackerrk4 po_utils ${FFTW_LIBRARIES})
-#python_standalone_executable(pyORBIT)
+# Finally we create the main project..
+include_directories(linac/rfgap)
+include_directories(linac/tracking)
+include_directories(utils/statistics)
+add_executable(pyORBIT main/main ${all_wrap_src})
+target_link_libraries(pyORBIT python2.7 pyorbit ${FFTW_LIBRARIES})
+python_standalone_executable(pyORBIT)
 
 #add_subdirectory(tests)
