--- a/src/spacecharge/CMakeLists.txt
+++ b/src/spacecharge/CMakeLists.txt
@@ -1,15 +1,5 @@
-file(GLOB sc_src_files *.cc)
-add_library(po_spacecharge ${sc_src_files})
-target_link_libraries(po_spacecharge ${FFTW_LIBRARIES} ${MPI_CXX_LIBRARIES})
-
-install(TARGETS po_spacecharge
-    LIBRARY DESTINATION lib
-    COMPONENT Libraries
-    ARCHIVE DESTINATION lib
-    COMPONENT Libraries
-)
-
-add_library(spacecharge MODULE wrap_spacecharge)
+file(GLOB src_files wrap_*.cc)
+add_library(spacecharge MODULE ${src_files})
 python_extension_module(spacecharge)
-target_link_libraries(spacecharge po_spacecharge)
+target_link_libraries(spacecharge pyorbit ${FFTW_LIBRARIES} ${MPI_CXX_LIBRARIES})
 install(TARGETS spacecharge LIBRARY DESTINATION .)
