installing all c modules to orbit.mod edits to py/orbit needed but not yet done

--- a/src/mpi/CMakeLists.txt
+++ b/src/mpi/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(orbit_mpi MODULE  ${src_files})
 python_extension_module(orbit_mpi)
 target_link_libraries(orbit_mpi pyorbit ${MPI_CXX_LIBRARIES})
-install(TARGETS orbit_mpi LIBRARY DESTINATION .)
+install(TARGETS orbit_mpi LIBRARY DESTINATION py/orbit/mod)
