--- a/src/orbit/Apertures/CMakeLists.txt
+++ b/src/orbit/Apertures/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(aperture MODULE  ${src_files})
 python_extension_module(aperture)
 target_link_libraries(aperture pyorbit)
-install(TARGETS aperture LIBRARY DESTINATION .)
+install(TARGETS aperture LIBRARY DESTINATION py/orbit/mod)
