--- a/src/orbit/CMakeLists.txt
+++ b/src/orbit/CMakeLists.txt
@@ -1,8 +1,10 @@
 include_directories(SynchPartRedefinition)
 
 add_subdirectory(Apertures)
+add_subdirectory(FieldTracker)
+add_subdirectory(MaterialInteractions)
 
 add_library(bunch MODULE wrap_bunch)
 python_extension_module(bunch)
 target_link_libraries(bunch pyorbit ${FFTW_LIBRARIES} ${MPI_CXX_LIBRARIES})
-install(TARGETS bunch LIBRARY DESTINATION .)
+install(TARGETS bunch LIBRARY DESTINATION py/orbit/mod)
