--- a/src/linac/CMakeLists.txt
+++ b/src/linac/CMakeLists.txt
@@ -11,4 +11,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(linac MODULE  ${src_files})
 python_extension_module(linac)
 target_link_libraries(linac pyorbit)
-install(TARGETS linac LIBRARY DESTINATION .)
+install(TARGETS linac LIBRARY DESTINATION py/orbit/mod)
