--- a/src/linac/tracking/CMakeLists.txt
+++ b/src/linac/tracking/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(linac_tracking MODULE ${src_files})
 python_extension_module(linac_tracking)
 target_link_libraries(linac_tracking pyorbit)
-install(TARGETS linac_tracking LIBRARY DESTINATION .)
+install(TARGETS linac_tracking LIBRARY DESTINATION py/orbit/mod)
