--- a/src/spacecharge/CMakeLists.txt
+++ b/src/spacecharge/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(spacecharge MODULE ${src_files})
 python_extension_module(spacecharge)
 target_link_libraries(spacecharge pyorbit ${FFTW_LIBRARIES} ${MPI_CXX_LIBRARIES})
-install(TARGETS spacecharge LIBRARY DESTINATION .)
+install(TARGETS spacecharge LIBRARY DESTINATION py/orbit/mod)
