--- a/src/teapot/CMakeLists.txt
+++ b/src/teapot/CMakeLists.txt
@@ -2,4 +2,4 @@ file(GLOB src_files wrap_*.cc)
 add_library(teapot_base MODULE  ${src_files})
 python_extension_module(teapot_base)
 target_link_libraries(teapot_base pyorbit)
-install(TARGETS teapot_base LIBRARY DESTINATION .)
+install(TARGETS teapot_base LIBRARY DESTINATION py/orbit/mod)
