--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -5,5 +5,4 @@ file(GLOB src_files wrap_*.cc */wrap_*.cc)
 add_library(orbit_utils MODULE  ${src_files})
 python_extension_module(orbit_utils)
 target_link_libraries(orbit_utils pyorbit)
-#target_link_libraries_with_dynamic_lookup(orbit_utils pyorbit)
-install(TARGETS orbit_utils LIBRARY DESTINATION .)
+install(TARGETS orbit_utils LIBRARY DESTINATION py/orbit/mod)
